<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange_light"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_account_box" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_user_name"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tv_user_name_title, tv_user_name" />

                <TextView
                    android:id="@+id/tv_user_name_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile" />

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_user_name_title"
                    app:layout_constraintStart_toEndOf="@id/tv_user_name_title"
                    app:layout_constraintTop_toTopOf="@id/tv_user_name_title"
                    tools:text="wlgnsdi" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tv_email_title, tv_email" />

                <TextView
                    android:id="@+id/tv_email_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_user_name_title" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_email_title"
                    app:layout_constraintStart_toEndOf="@id/tv_email_title"
                    app:layout_constraintTop_toTopOf="@id/tv_email_title"
                    tools:text="wlgnsdi@paran.com" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tv_blog_title, tv_blog" />

                <TextView
                    android:id="@+id/tv_blog_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/blog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_title" />

                <TextView
                    android:id="@+id/tv_blog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_blog_title"
                    app:layout_constraintStart_toEndOf="@id/tv_blog_title"
                    app:layout_constraintTop_toTopOf="@id/tv_blog_title"
                    tools:text="http://www.blog.com" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tv_location_title, tv_location" />

                <TextView
                    android:id="@+id/tv_location_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_blog_title" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_location_title"
                    app:layout_constraintStart_toEndOf="@id/tv_location_title"
                    app:layout_constraintTop_toTopOf="@id/tv_location_title"
                    tools:text="Seoul" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tv_company_title, tv_company" />

                <TextView
                    android:id="@+id/tv_company_title"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/company"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_location_title" />

                <TextView
                    android:id="@+id/tv_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_company_title"
                    app:layout_constraintStart_toEndOf="@id/tv_company_title"
                    app:layout_constraintTop_toTopOf="@id/tv_company_title"
                    tools:text="DayDrawingLab" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_memo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="tv_memo" />

                <EditText
                    android:id="@+id/et_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_transparent_border_orange_3"
                    android:padding="5dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/tv_company_title" />

                <TextView
                    android:id="@+id/tv_memo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_transparent_border_orange_3"
                    app:layout_constraintTop_toBottomOf="@id/tv_company_title"
                    tools:text="@string/fake_sentence" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>